# sfms-playground-little-game

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  little-game.code-workspace
.github/workflows/: ci.yml
assets/: test.json
include/: constants.hpp  game.hpp  physic-object.hpp  physic-world.hpp  window.hpp
src/: constants.cpp  game.cpp  main.cpp  window.cpp
src/core/: game.cpp  physic-object.cpp  physic-world.cpp  window.cpp
